fix: remove light mode colors and keep deffalt dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,10 @@
 
 @layer base {
   :root {
-    --background: 200 20% 20%;
-    --btn-background: 200 10% 91%;
-    --btn-background-hover: 200 10% 89%;
-    --foreground: 200 50% 3%;
+    --background: 200 50% 3%;
+    --btn-background: 200 10% 9%;
+    --btn-background-hover: 200 10% 12%;
+    --foreground: 200 20% 96%;
     --card-background: 200 10% 12%;
   }
 
